--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,10 @@
     <string name="nickname">Nickname</string>
     <string name="email_example">email@example.com</string>
     <string name="logout">Wyloguj się</string>
+    <string name="slides">Slajdy</string>
+    <string name="codes">Kody</string>
+    <string name="quizzes">Testy</string>
+    <string name="external_links">Linki</string>
+    <string name="topic_details">Szczegóły tematu</string>
+    <string name="sections">Sekcje</string>
 </resources>
