--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="add_topic">Dodaj temat</string>
     <string name="example_name">Przykładowa nazwa</string>
     <string name="example_desc">Przykładowy opis</string>
-    <string name="topic_details">Szczegóły tematu</string>
+    <string name="topic_details">Temat</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="back">Wróć</string>
     <string name="slides">Slajdy</string>
@@ -39,14 +39,13 @@
     <string name="quiz">Test</string>
     <string name="code">Kod</string>
     <string name="slide">Slajd</string>
-    <string name="logout">Wyloguj się</string>
     <string name="sign_up">Zarejestruj się</string>
     <string name="nickname">Nazwa użytkownika</string>
     <string name="https_example_com">https://example.com</string>
-    <string name="link_preview">Podgląd linku</string>
+    <string name="link_preview">Link</string>
     <string name="app_name_short">JavaPro</string>
     <string name="username">Nazwa użytkownika</string>
-    <string name="test_details">Szczegóły testu</string>
+    <string name="test_details">Test</string>
     <string name="que_amount">Ilość pytań</string>
     <string name="start_quiz">Rozpocznij quiz</string>
     <string name="log_out">Wyloguj się</string>
@@ -56,4 +55,8 @@
     <string name="field_is_required">Pole jest wymagane</string>
     <string name="bad_email_format">Zły format email</string>
     <string name="bad_password_format"><![CDATA[Użyj [az][AZ][0-9][@#$%^&+=]]]></string>
+    <string name="account">Konto</string>
+    <string name="appearance">Wygląd</string>
+    <string name="dark_theme">Tryb ciemny</string>
+    <string name="dark_theme_no_work">Tryb ciemny (w implementacji)</string>
 </resources>
