--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="label_link">Link</string>
     <string name="app_name_short">JavaPro</string>
     <string name="username">Nazwa użytkownika</string>
-    <string name="test_details">Test</string>
+    <string name="label_test">Test</string>
     <string name="que_amount">Ilość pytań</string>
     <string name="start_quiz">Rozpocznij quiz</string>
     <string name="menu_logout">Wyloguj się</string>
@@ -95,4 +95,21 @@
     <string name="example_que">Przykladowe pytanie o przykładowej treści?</string>
     <string name="example_ans">Przykładowa odpowiedź</string>
     <string name="label_next">Następne</string>
+    <string name="label_finish">Zakończ</string>
+    <string name="load_new_slides">Załadowano więcej slidów</string>
+    <string name="label_congratulation">Gratulacje!</string>
+    <string name="label_im_sorry">Przykro mi!</string>
+    <string name="label_correct_que">Poprawne: </string>
+    <string name="label_fail_que" >Niepoprawne: </string>
+    <string name="label_all_que">Wszystkich: </string>
+    <string name="label_profile">Profil</string>
+    <string name="label_please_wait">Proszę czekać...</string>
+    <string name="label_stats">Testy</string>
+    <string name="label_open">Otwarte</string>
+    <string name="label_added">Dodane</string>
+    <string name="label_closed_general">Zakończone</string>
+    <string name="label_closed_success">Zakończone sukcesem</string>
+    <string name="label_closed_fail">Zakończone porażką</string>
+    <string name="label_efficiency">Skuteczność</string>
+    <string name="bad_size_nickname">Użyj od 5 do 125 znaków</string>
 </resources>
